--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,2 +1,4 @@
 @import './config/variables.scss';
 @import './config/reste.scss';
+@import './components/heading.scss';
+@import './components/nav.scss';
