--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -2,12 +2,13 @@
   ul {
     display: flex;
     gap: 4rem;
+    padding: 1rem;
 
     a {
       position: relative;
       color: $size-color;
       font-size: 2rem;
-      transition: 300ms;
+      transition: all 300ms;
     }
 
     a:hover {
