--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,3 +2,5 @@
 @import './config/reste.scss';
 @import './components/heading.scss';
 @import './components/nav.scss';
+@import './components/menuMobile.scss';
+@import './components/buttonMenu.scss';
