--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,3 +4,5 @@
 @import './components/nav.scss';
 @import './components/menuMobile.scss';
 @import './components/buttonMenu.scss';
+
+@import './template/home.scss';
