--- a/src/styles/config/reste.scss
+++ b/src/styles/config/reste.scss
@@ -28,3 +28,18 @@ a {
   width: 100%;
   height: 100%;
 }
+
+.conteiner-main {
+  height: 100%;
+  margin-top: 10rem;
+  background-color: $secondary-color;
+  padding: 0 40rem;
+
+  @include mediaQurery(phone) {
+    padding: 0 5rem;
+  }
+
+  @include mediaQurery(tablet) {
+    padding: 0 5rem;
+  }
+}
