feat: adding experience session

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,5 +6,6 @@
 @import './components/buttonMenu.scss';
 @import './components/conteiner.scss';
 @import './components/sobre.scss';
+@import './components/experiencia.scss';
 
 @import './template/home.scss';
