--- a/src/styles/components/sobre.scss
+++ b/src/styles/components/sobre.scss
@@ -1,4 +1,4 @@
-.conteiner-sobre {
+.container-sobre {
   background-color: #151515;
   margin: 0 auto;
   display: flex;
@@ -19,7 +19,7 @@
       height: 100%;
     }
 
-    .conteiner-text {
+    .container-text {
       height: 100%;
 
       .sobre-name {
@@ -45,7 +45,7 @@
       min-height: 10% !important;
     }
 
-    .conteiner-text {
+    .container-text {
       height: 100%;
 
       .sobre-name {
@@ -73,7 +73,7 @@
     }
   }
 
-  .conteiner-text {
+  .container-text {
     width: 100%;
     display: flex;
     flex-direction: column;
