--- a/src/styles/config/reste.scss
+++ b/src/styles/config/reste.scss
@@ -23,13 +23,13 @@ a {
   color: #333;
 }
 
-.conteiner-bg-black {
+.container-bg-black {
   background-color: $secondary-color;
   width: 100%;
   height: 100%;
 }
 
-.conteiner-main {
+.container-main {
   height: 100%;
   margin-top: 10rem;
   background-color: $secondary-color;
