--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,7 +4,7 @@
 @import './components/nav.scss';
 @import './components/menuMobile.scss';
 @import './components/buttonMenu.scss';
-@import './components/conteiner.scss';
+@import './components/container.scss';
 @import './components/sobre.scss';
 @import './components/experiencia.scss';
 
