feat: created project componet

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,5 +7,6 @@
 @import './components/container.scss';
 @import './components/sobre.scss';
 @import './components/experiencia.scss';
+@import './components/project.scss';
 
 @import './template/home.scss';
